# terpsichore

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Kconfig  README.md  prj.conf  prj_debug.conf  terpsichore.overlay  west.yml
.devcontainer/: devcontainer.json
boards/arm/fkmg_stm32f405/: Kconfig.fkmg_stm32f405  board.yml  fkmg_stm32f405.dts  fkmg_stm32f405.yaml  fkmg_stm32f405_defconfig
boards/arm/fkmg_terpsichore/: fkmg_terpsichore_defconfig  ti,dac7578.yaml
boards/arm/fkmg_terpsichore/doc/: index.rst
include/: led.h  leds.h
include/drivers/: dac7578.c  dac7578.h  dac7578.yaml
include/io-ctrl/: README.md  io_ctrl.h
include/io-ctrl/adc/: adc.h  err.h  evt.h  id.h  instance.h  instance_cfg.h  listener.h  listener_cb.h  listener_cfg.h
include/io-ctrl/dac/: dac.h  err.h  evt.h  id.h  instance.h  instance_cfg.h  listener.h  listener_cb.h  listener_cfg.h
include/io-ctrl/gpio/: err.h  evt.h  gpio.h  id.h  instance.h  instance_cfg.h  listener.h  listener_cb.h  listener_cfg.h  state.h
include/io-ctrl/i2c/: err.h  evt.h  i2c.h  id.h  instance.h  instance_cfg.h  listener.h  listener_cb.h  listener_cfg.h
include/io-ctrl/led/: err.h  evt.h  id.h  instance.h  instance_cfg.h  led.h  listener.h  listener_cb.h  listener_cfg.h
include/led/: err.h  instance_cfg.h  listener.h  listener_cb.h
include/led/private/: module_data.h  sm_evt.h
include/terpsichore/leds/: evt.h  id.h  instance.h  listener_cfg.h
src/: led.c  leds.c  main.c
src/io_ctrl/adc/: adc.c
src/io_ctrl/dac/: dac.c
src/io_ctrl/gpio/: gpio.c
src/io_ctrl/i2c/: i2c.c
src/io_ctrl/led/: led.c
(+10 files in other folders)
